hphp/hack/test/typecheck/retonly_type_member.php.exp
File "retonly_type_member.php", line 6, characters 10-13:
The `void` typehint can only be used to describe a function return type (Naming[2063])
File "retonly_type_member.php", line 6, characters 10-13:
You cannot use `HH_FIXME` or `HH_IGNORE_ERROR` comments to suppress error 2063 in declarations (Naming[2063])
File "retonly_type_member.php", line 8, characters 17-24:
The `noreturn` typehint can only be used to describe a function return type (Naming[2063])
